@@ -1,3 +1,5 @@
+* Normalize \t \n \r and multiple spaces to \x20 in element className methods. [jddalton]
+
 * Move method definition of Fuse.Util.$, Fuse.get, and Fuse.getById to dom.js and cleanup element.js. [jddalton]
 
 * Switch from using Array#join for string concatenation to using the plus (+) operator for better minification. [jddalton]
